deploy/nexodus-monitoring/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: nexodus-monitoring
spec:
  tls:
    - hosts:
        - grafana.try.nexodus.127.0.0.1.nip.io
  rules:
    - host: grafana.try.nexodus.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nexodus-grafana-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: nexodus-monitoring
spec:
  tls:
    - hosts:
        - prometheus.try.nexodus.127.0.0.1.nip.io
  rules:
    - host: prometheus.try.nexodus.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
